# sqlx-adapter

./: Cargo.toml  README.md
.sqlx/: query-0ee2b869a545c67051c3409d444bc853ca03a55b834f9823e0c7675556122317.json  query-17e78c432dbab089fa0a918dfdc2d5dae43d8354cc35d2cb5450b3e8a92ba9ec.json  query-4904dd0b33bc73cd01c6330005e08d6e5290c894704a9802b8e597bdec4b2037.json  query-607b617f24e2032cf89b9550130a5358d8263e92c789d9f6c2f47b235b5b5903.json  query-66c31e9d49e4aa3e01670e816a91b0e2926124b29ba66d2f995efb9957f5496f.json  query-b91e273693cfaead6884d42e906ead1a1de7bbc4019a6e151b2e3bef84aa4889.json
src/: actions.rs  adapter.rs
