[package]
name = "sqlx-adapter"
version = "0.4.2"
authors = ["Eason Chai <hackerchai.com@gmail.com>","Cheng JIANG <jiang.cheng@vip.163.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Sqlx adapter for casbin-rs"
homepage= "https://github.com/casbin-rs/sqlx-adapter"
readme= "README.md"

[dependencies]
casbin = { version = "2.0", default-features = false }
sqlx = { version = "0.7", default-features = false, features = [ "macros" ] }
async-trait = "0.1"
dotenv = { version = "0.15.0", default-features = false }
tokio = { version = "1", default-features = false, optional = true }

[features]
default = ["postgres", "runtime-tokio-native-tls"]

#databases
postgres = ["sqlx/postgres"]

# tokio
runtime-tokio-native-tls = ["casbin/runtime-tokio", "sqlx/runtime-tokio-native-tls"]
runtime-tokio-rustls = ["casbin/runtime-tokio", "sqlx/runtime-tokio-rustls"]

[dev-dependencies]
tokio = { version = "1.10.0", features = [ "full" ] }

[profile.release]
codegen-units = 1
lto           = true
opt-level     = 3

[profile.dev]
split-debuginfo = "unpacked"
